# ROS2_Humble_Learning

./: README.md
10_plugin/: README.md
10_plugin/src/fishbot_navigation2/config/: nav2_params.yaml
10_plugin/src/motion_control_system/: CMakeLists.txt  package.xml
10_plugin/src/motion_control_system/include/motion_control_system/: motion_control_interface.hpp  spin_motion_controller.hpp
10_plugin/src/motion_control_system/src/: test_plugin.cpp
10_plugin/src/nav2_custom_controller/: CMakeLists.txt  package.xml
10_plugin/src/nav2_custom_planner/: CMakeLists.txt  package.xml
10_plugin/src/nav2_custom_planner/include/nav2_custom_planner/: nav2_custom_planner.hpp
10_plugin/src/nav2_custom_planner/src/: nav2_custom_planner.cpp
1_Test_Env/: README.md  main.cpp  run.py
2_Node/: CMakeLists.txt  README.md  py_node.py
3_Package/: README.md
3_Package/cpp_pkg/: CMakeLists.txt  package.xml
3_Package/cpp_pkg/src/: cpp_node.cpp
3_Package/python_pkg/: package.xml  setup.py
4_Oop/: README.md
4_Oop/cpp_pkg/: CMakeLists.txt  package.xml
4_Oop/cpp_pkg/src/: person_node.cpp
4_Oop/py_pkg/: package.xml  setup.py
4_Oop/py_pkg/py_pkg/: TebPlanner.py  _interface.py  person_node.py
5_Topic_ws/: README.md
5_Topic_ws/cpp_pkg/: CMakeLists.txt  package.xml
5_Topic_ws/cpp_pkg/src/: traj_node.cpp
5_Topic_ws/demo_python_topic/: package.xml  setup.py
5_Topic_ws/demo_python_topic/demo_python_topic/: cmd_pub.py  pub_goal.py
6_Topic_practice_ws/: README.md
6_Topic_practice_ws/display/: CMakeLists.txt  package.xml
6_Topic_practice_ws/display/src/: status_display.cpp
6_Topic_practice_ws/interfaces/: CMakeLists.txt  package.xml
6_Topic_practice_ws/publisher/: package.xml  setup.py
6_Topic_practice_ws/publisher/publisher/: status_pub.py
7_service/: README.md
7_service/demo_python_service/: package.xml  setup.py
7_service/demo_python_service/demo_python_service/: face_detect.py  face_detect_client_node.py  face_detect_node.py
7_service/demo_python_service/launch/: demo.launch.py
7_service/face_service_type/: CMakeLists.txt  package.xml
8_urdf/: README.md  robot_name.gv
8_urdf/example_description/: CMakeLists.txt  package.xml
8_urdf/example_description/launch/: dis_robot.launch.py  gazebo.sim.launch.py
8_urdf/example_description/urdf/: first_robot.urdf.xacro  r550.gazebo.xacro  r550.xacro
8_urdf/example_description/world/: world.world
8_urdf/src/example_description/: CMakeLists.txt
8_urdf/src/example_description/config/: r550.yaml
8_urdf/src/example_description/launch/: gazebo.sim.launch.py
8_urdf/src/example_description/urdf/: first_robot.urdf  r550.gazebo.xacro
9_nav2/: README.md
9_nav2/src/fishbot_application/: package.xml  setup.py
9_nav2/src/fishbot_application/fishbot_application/: get_robot_pose.py
9_nav2/src/fishbot_description/config/: mapper_params_online_async.yaml
9_nav2/src/fishbot_description/config/rviz/: slam.rviz
9_nav2/src/fishbot_description/launch/: gazebo_sim.launch.py  slam_manual.launch.py
9_nav2/src/fishbot_description/urdf/fishbot/plugins/: gazebo_sensor_plugin.xacro
9_nav2/src/fishbot_navigation2/: CMakeLists.txt  package.xml
9_nav2/src/fishbot_navigation2/config/: nav2_params.yaml
